--- a/15-PDFs-and-Spreadsheets/Excercise and Notes/00-Working-with-CSV-Files.ipynb
+++ b/15-PDFs-and-Spreadsheets/Excercise and Notes/00-Working-with-CSV-Files.ipynb
@@ -4,14 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2    > <span style='color:Yellow'><center> <em>Working with CSV files.</em></center> </span></h2>"
+    "\n",
+    "# <h2    > <span style='color:Yellow'><center> <em>Working with CSV files.</em></center> </span></h2>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Working with CSV Files\n",
+    "## Working with CSV Files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "\n",
     "Welcome back! Let's discuss how to work with CSV files in Python. A file with the CSV file extension is a Comma Separated Values file. All CSV files are plain text, contain alphanumeric characters, and structure the data contained within them in a tabular form. Don't confuse Excel Files with csv files, while csv files are formatted very similarly to excel files, they don't have data types for their values, they are all strings with no font or color. They also don't have worksheets the way an excel file does. Python does have several libraries for working with Excel files, you can check them out [here](http://www.python-excel.org/) and [here](https://www.xlwings.org/).\n",
     "\n",
@@ -22,9 +33,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "____\n",
+    "## ____\n",
     "## Notebook Location. \n",
     "\n",
     "Run **pwd** inside a notebook cell to find out where your notebook is located"
@@ -33,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -53,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import csv"
@@ -62,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# OPen the file\n",
@@ -76,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# callcsv reader on it\n",
@@ -86,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# reformat it into python object list of lists"
@@ -95,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_lines = list(csv_data)"
@@ -104,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# data_lines"
@@ -113,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -133,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -181,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -201,14 +236,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "for line in data_lines[1:15]:\n",
@@ -218,35 +257,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -254,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "____\n",
+    "## ____\n",
     "## Reading CSV Files"
    ]
   },
@@ -296,22 +345,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.TextIOWrapper name='example.csv' mode='r' encoding='cp1252'>"
+       "<_io.TextIOWrapper name='example-simple.csv' mode='r' encoding='cp1252'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "data = open('example-simple.csv')\n",
+    "\n",
+    "import csv\n",
+    "csvdata = csv.reader(data)\n",
+    "\n",
+    " data_lines = list(csvdata)"
    ]
   },
   {
@@ -588,7 +651,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Writing to CSV Files\n",
     "\n",
@@ -597,7 +662,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## New File \n",
     "**This will also overwrite any exisiting file with the same name, so be careful with this!**"
@@ -607,7 +674,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -620,7 +688,8 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -630,7 +699,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -651,7 +722,8 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -662,7 +734,8 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -671,7 +744,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## ____\n",
     "### Existing File "
@@ -681,7 +756,8 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -692,7 +768,8 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -702,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -723,7 +802,8 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -732,7 +812,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "That is all for the basics! If you believe you will be working with CSV files often, you may want to check out the powerful [pandas library](https://pandas.pydata.org/)."
    ]
@@ -740,7 +822,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -748,35 +832,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2    > <span style='color:Yellow'><center> <em> Excercise.</em></center> </span></h2>"
+    "# <h2    > <span style='color:Yellow'><center> <em> Excercise.</em></center> </span></h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = open('example-simple.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "data = open('example-simple.csv')\n",
+    "\n",
     "import csv\n",
-    "csvdata = csv.reader(data)"
+    "csvdata = csv.reader(data)\n",
+    "\n",
+    " data_lines = list(csvdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_lines"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id', 'first_name', 'last_name', 'email', 'gender', 'ip_address', 'city']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_lines = list(csvdata)"
+    "data_lines[0]"
    ]
   },
   {
@@ -787,112 +896,7 @@
     {
      "data": {
       "text/plain": [
-       "[['id', 'first_name', 'last_name', 'email', 'gender', 'ip_address', 'city'],\n",
-       " ['1',\n",
-       "  'Joseph',\n",
-       "  'Zaniolini',\n",
-       "  'jzaniolini0@simplemachines.org',\n",
-       "  'Male',\n",
-       "  '163.168.68.132',\n",
-       "  'Pedro Leopoldo'],\n",
-       " ['2',\n",
-       "  'Freida',\n",
-       "  'Drillingcourt',\n",
-       "  'fdrillingcourt1@umich.edu',\n",
-       "  'Female',\n",
-       "  '97.212.102.79',\n",
-       "  'Buri'],\n",
-       " ['3',\n",
-       "  'Nanni',\n",
-       "  'Herity',\n",
-       "  'nherity2@statcounter.com',\n",
-       "  'Female',\n",
-       "  '145.151.178.98',\n",
-       "  'Claver'],\n",
-       " ['4',\n",
-       "  'Orazio',\n",
-       "  'Frayling',\n",
-       "  'ofrayling3@economist.com',\n",
-       "  'Male',\n",
-       "  '25.199.143.143',\n",
-       "  'Kungur'],\n",
-       " ['5',\n",
-       "  'Julianne',\n",
-       "  'Murrison',\n",
-       "  'jmurrison4@cbslocal.com',\n",
-       "  'Female',\n",
-       "  '10.186.243.144',\n",
-       "  'Sainte-Luce-sur-Loire'],\n",
-       " ['6',\n",
-       "  'Lucy',\n",
-       "  'Gamet',\n",
-       "  'lgamet5@list-manage.com',\n",
-       "  'Female',\n",
-       "  '10.151.93.36',\n",
-       "  'Pak Phli'],\n",
-       " ['7',\n",
-       "  'Dyana',\n",
-       "  'Howatt',\n",
-       "  'dhowatt6@amazon.com',\n",
-       "  'Female',\n",
-       "  '224.169.61.29',\n",
-       "  'Palmares'],\n",
-       " ['8',\n",
-       "  'Kassey',\n",
-       "  'Herion',\n",
-       "  'kherion7@amazon.com',\n",
-       "  'Female',\n",
-       "  '245.51.154.79',\n",
-       "  'ZÃ¡kynthos'],\n",
-       " ['9',\n",
-       "  'Chrissy',\n",
-       "  'Hedworth',\n",
-       "  'chedworth8@china.com.cn',\n",
-       "  'Male',\n",
-       "  '124.222.93.57',\n",
-       "  'Boevange-sur-Attert'],\n",
-       " ['10',\n",
-       "  'Hyatt',\n",
-       "  'Gasquoine',\n",
-       "  'hgasquoine9@google.ru',\n",
-       "  'Male',\n",
-       "  '221.155.106.39',\n",
-       "  'ZÅ‚oty Stok'],\n",
-       " ['11',\n",
-       "  'Felicdad',\n",
-       "  'Tarr',\n",
-       "  'ftarra@shareasale.com',\n",
-       "  'Female',\n",
-       "  '145.203.98.173',\n",
-       "  'Salamnunggal'],\n",
-       " ['12',\n",
-       "  'Andrew',\n",
-       "  'Bath',\n",
-       "  'abathb@umn.edu',\n",
-       "  'Male',\n",
-       "  '64.36.30.186',\n",
-       "  'El Hermel'],\n",
-       " ['13',\n",
-       "  'Lucais',\n",
-       "  'Chastang',\n",
-       "  'lchastangc@goo.gl',\n",
-       "  'Male',\n",
-       "  '142.182.6.86',\n",
-       "  'Tilburg'],\n",
-       " ['14',\n",
-       "  'Car',\n",
-       "  'Cerie',\n",
-       "  'cceried@yale.edu',\n",
-       "  'Male',\n",
-       "  '203.204.69.107',\n",
-       "  'Shofirkon'],\n",
-       " ['15',\n",
-       "  'Alvera',\n",
-       "  'Jepp',\n",
-       "  'ajeppe@umich.edu',\n",
-       "  'Female',\n",
-       "  '202.150.229.139',\n",
-       "  'New Sibonga']]"
+       "'first_name'"
       ]
      },
      "execution_count": 8,
@@ -901,15 +905,159 @@
     }
    ],
    "source": [
-    "data_lines"
+    "data_lines[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['id', 'first_name', 'last_name', 'email', 'gender', 'ip_address', 'city']\n",
+      "['1', 'Joseph', 'Zaniolini', 'jzaniolini0@simplemachines.org', 'Male', '163.168.68.132', 'Pedro Leopoldo']\n",
+      "['2', 'Freida', 'Drillingcourt', 'fdrillingcourt1@umich.edu', 'Female', '97.212.102.79', 'Buri']\n",
+      "['3', 'Nanni', 'Herity', 'nherity2@statcounter.com', 'Female', '145.151.178.98', 'Claver']\n",
+      "['4', 'Orazio', 'Frayling', 'ofrayling3@economist.com', 'Male', '25.199.143.143', 'Kungur']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in data_lines[:5]:\n",
+    "    print(line)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hgasquoine9@google.ru'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### all the emails from all the rows. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_emails = []\n",
+    "for line in data_lines[1:10]:\n",
+    "    all_emails.append(line[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jzaniolini0@simplemachines.org',\n",
+       " 'fdrillingcourt1@umich.edu',\n",
+       " 'nherity2@statcounter.com',\n",
+       " 'ofrayling3@economist.com',\n",
+       " 'jmurrison4@cbslocal.com',\n",
+       " 'lgamet5@list-manage.com',\n",
+       " 'dhowatt6@amazon.com',\n",
+       " 'kherion7@amazon.com',\n",
+       " 'chedworth8@china.com.cn']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_emails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate firstname and last name "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FullNames = []\n",
+    "\n",
+    "for line in data_lines[1:10]:\n",
+    "    FullNames.append( line[1]+ \" \" + line[2] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Joseph Zaniolini',\n",
+       " 'Freida Drillingcourt',\n",
+       " 'Nanni Herity',\n",
+       " 'Orazio Frayling',\n",
+       " 'Julianne Murrison',\n",
+       " 'Lucy Gamet',\n",
+       " 'Dyana Howatt',\n",
+       " 'Kassey Herion',\n",
+       " 'Chrissy Hedworth']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FullNames"
+   ]
   },
   {
    "cell_type": "code",
@@ -921,7 +1069,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -935,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
