--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "digital-nigeria",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:Yellow'> Simple Color heading. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "knowing-melissa",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:Yellow'> Simple Color heading. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aggressive-discrimination",
    "metadata": {},
    "source": [
-    "# Typical Heading"
+    "# <span style='color:Yellow'><center> <em>Heading More details</em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>description</em></center> </span></h2>\n",
+    "<center><em>More description.</em></center>"
    ]
   },
   {
@@ -13,9 +35,9 @@
    "id": "accessible-victoria",
    "metadata": {},
    "source": [
-    "<span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
-    "<h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
-    "<center><em>Video : 105 - 0 Opening And Reading Files And Folders  Python Os Module-1 </em></center>"
+    "    <span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
+    "    <h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
+    "    <center><em>Video : 105 - 0 Opening And Reading Files And Folders  Python Os Module-1 </em></center>"
    ]
   },
   {
@@ -80,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "involved-sympathy",
    "metadata": {
     "hidden": true
@@ -88,10 +110,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (3739341851.py, line 3)",
+     "evalue": "invalid syntax (<ipython-input-1-cb2b471de7da>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    <a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-cb2b471de7da>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    <a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -247,7 +269,9 @@
   {
    "cell_type": "markdown",
    "id": "amino-dress",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Adding HTML Information "
    ]
@@ -256,14 +280,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "trained-french",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "written-programming",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<table>\n",
     "\n",
@@ -329,14 +357,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "affected-personality",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "respiratory-buying",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Increase the cell width of the Jupyter/ipython notebook"
    ]
@@ -344,7 +376,9 @@
   {
    "cell_type": "markdown",
    "id": "improved-longitude",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://stackoverflow.com/questions/21971449/how-do-i-increase-the-cell-width-of-the-jupyter-ipython-notebook-in-my-browser\n",
     "\n",
@@ -362,7 +396,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "compound-specialist",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
