--- a/15-PDFs-and-Spreadsheets/Excercise and Notes/00-Working-with-CSV-Files.ipynb
+++ b/15-PDFs-and-Spreadsheets/Excercise and Notes/00-Working-with-CSV-Files.ipynb
@@ -329,7 +329,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When passing in the file path, make sure to include the extension if it has one, you should be able to Tab Autocomplete the file name. If you can't Tab autocomplete, that is a good indicator your file is not in the same location as your notebook. You can always type in the entire file path (it will look similar in formatting to the output of **pwd**."
+    "When passing in the file path, make sure to include the extension if it has one, you should be able to Tab Autocomplete the file name. If you can't Tab autocomplete, that is a good indicator your file is not in the same location as your notebook. You can always type in the entire file path (it will look similar in formatting to the output of **pwd**.\n",
+    "\n",
+    "\n",
+    "    data = open('example-simple.csv')\n",
+    "    import csv\n",
+    "    csvdata = csv.reader(data)\n",
+    "     data_lines = list(csvdata)"
    ]
   },
   {
@@ -367,15 +373,85 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "\n",
-    "data = open('example-simple.csv')\n",
-    "\n",
-    "import csv\n",
-    "csvdata = csv.reader(data)\n",
-    "\n",
-    " data_lines = list(csvdata)"
+    "##### Printing data files:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_emails = []\n",
+    "for line in data_lines[1:10]:\n",
+    "    all_emails.append(line[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### concatenating multiple columns\n",
+    "    First name and last name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FullNames = []\n",
+    "\n",
+    "for line in data_lines[1:10]:\n",
+    "    FullNames.append( line[1]+ \" \" + line[2] )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Joseph Zaniolini',\n",
+       " 'Freida Drillingcourt',\n",
+       " 'Nanni Herity',\n",
+       " 'Orazio Frayling',\n",
+       " 'Julianne Murrison',\n",
+       " 'Lucy Gamet',\n",
+       " 'Dyana Howatt',\n",
+       " 'Kassey Herion',\n",
+       " 'Chrissy Hedworth']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FullNames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -390,9 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -411,24 +486,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'charmap' codec can't decode byte 0x8d in position 1835: character maps to <undefined>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-1f501450909b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata_lines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcsv_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\encodings\\cp1252.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mIncrementalDecoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIncrementalDecoder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcharmap_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdecoding_table\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mStreamWriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCodec\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcodecs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mStreamWriter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x8d in position 1835: character maps to <undefined>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_lines = list(csv_data)"
    ]
@@ -744,9 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## ____\n",
     "### Existing File "
@@ -756,8 +816,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -768,8 +827,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -779,9 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -802,8 +858,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -812,9 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "That is all for the basics! If you believe you will be working with CSV files often, you may want to check out the powerful [pandas library](https://pandas.pydata.org/)."
    ]
@@ -822,9 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -837,17 +888,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "data = open('example-simple.csv')\n",
-    "\n",
     "import csv\n",
     "csvdata = csv.reader(data)\n",
-    "\n",
-    " data_lines = list(csvdata)"
+    "data_lines = list(csvdata)"
    ]
   },
   {
@@ -870,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +927,7 @@
        "['id', 'first_name', 'last_name', 'email', 'gender', 'ip_address', 'city']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +1106,25 @@
    "source": [
     "FullNames"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
