--- a/15-PDFs-and-Spreadsheets/Excercise and Notes/01-Working-with-PDFs.ipynb
+++ b/15-PDFs-and-Spreadsheets/Excercise and Notes/01-Working-with-PDFs.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
     "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
+    "\n",
+    "# <span style='color:Yellow'> Working with PDF Files. </span>\n",
+    "\n"
    ]
   },
   {
@@ -371,7 +370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
