--- a/15-PDFs-and-Spreadsheets/Excercise and Notes/01-Working-with-PDFs.ipynb
+++ b/15-PDFs-and-Spreadsheets/Excercise and Notes/01-Working-with-PDFs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "\n",
     "\n",
-    "# <span style='color:Tomato'> Working with PDF Files. </span>\n",
+    "# <span style='color:Darkblue'> Working with PDF Files. </span>\n",
     "\n"
    ]
   },
