--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -7,18 +7,68 @@
     "heading_collapsed": true
    },
    "source": [
-    "# <span style='color:Yellow'> Simple Color heading. </span>"
+    "# <span style='color:Orange'> Simple Color heading Orange. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "closed-combining",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    <span style='color:Orange'> Simple Color heading Orange. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "actual-relative",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:Brown'> Simple Color heading Brown. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "employed-kuwait",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    <span style='color:Brown'> Simple Color heading Brown. </span>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "knowing-melissa",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "    # <span style='color:Yellow'> Simple Color heading. </span>"
+    "# <span style='color:Purple'> Simple Color heading Purple. </span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "scheduled-persian",
+   "metadata": {},
+   "source": [
+    "    # <span style='color:Purple'> Simple Color heading Purple. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "minute-commander",
+   "metadata": {},
+   "source": [
+    "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hybrid-actor",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
