--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closed-combining",
+   "id": "western-congress",
    "metadata": {
     "hidden": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "employed-kuwait",
+   "id": "regional-baltimore",
    "metadata": {
     "hidden": true
    },
@@ -43,32 +43,42 @@
   {
    "cell_type": "markdown",
    "id": "knowing-melissa",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:Purple'> Simple Color heading Purple. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "scheduled-persian",
-   "metadata": {},
+   "id": "cardiovascular-monroe",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    # <span style='color:Purple'> Simple Color heading Purple. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minute-commander",
-   "metadata": {},
+   "id": "breathing-ordinary",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hybrid-actor",
-   "metadata": {},
-   "source": []
+   "id": "naked-facing",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
+   ]
   },
   {
    "cell_type": "markdown",
